Update index.html comments

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
 
-  <!-- Our CSS -->
+  <!-- Local CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
 <body>
 
-  <!-- The div that holds our map -->
+  <!-- The div that holds the map -->
   <div id="map"></div>
 
   <!-- Leaflet JS -->
